--- a/.github/workflows/deploy-vue.yml
+++ b/.github/workflows/deploy-vue.yml
@@ -28,7 +28,7 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
+          username: ${{ secrets.SSH_USER_NAME }}
           key: ${{ secrets.SSH_KEY }}
           source: "./dist/*"
           target: "/var/www/html"
